# qgsm_lhc_analyze

./: .gitignore  distribution_class.py  distributions.py  qgsm_collect.py  qgsm_plot.py
all_python/: Histograms.py  b_corr.py.out  main.py  qgsm_FB_corr.py  qgsm_collect.py
c++/: CMakeLists.txt  Histogram.cpp  Histogram.h  larissa_root.cpp  main.cpp  rootTest.cpp
counted/: dnf.out  nbdnf.out  nbdnf_dnf.out
counted/S0/: H0nbdnf_dnf.out  H2nbdnf_dnf.out  H4nbdnf_dnf.out  H6nbdnf_dnf.out  H8nbdnf_dnf.out  tot_sum.out
counted/S1/: H0nbdnf_dnf.out  H2nbdnf_dnf.out  H4nbdnf_dnf.out  H6nbdnf_dnf.out  H8nbdnf_dnf.out  tot_sum.out
counted/S2/: H0nbdnf_dnf.out  H2nbdnf_dnf.out  H4nbdnf_dnf.out  H6nbdnf_dnf.out  H8nbdnf_dnf.out  bin_edges.out  tot_sum.out
counted/S3/: H0nbdnf_dnf.out  H2nbdnf_dnf.out  H4nbdnf_dnf.out  H6nbdnf_dnf.out  H8nbdnf_dnf.out  tot_sum.out
counted/S4/: H0nbdnf_dnf.out  H2nbdnf_dnf.out  H4nbdnf_dnf.out  H6nbdnf_dnf.out  H8nbdnf_dnf.out  tot_sum.out
counted/S5/: H0nbdnf_dnf.out  H2nbdnf_dnf.out  H4nbdnf_dnf.out  H6nbdnf_dnf.out  H8nbdnf_dnf.out  tot_sum.out
counted/S6/: H0nbdnf_dnf.out  H2nbdnf_dnf.out  H4nbdnf_dnf.out  H6nbdnf_dnf.out  H8nbdnf_dnf.out  tot_sum.out
counted/S7/: H0nbdnf_dnf.out  H2nbdnf_dnf.out  H4nbdnf_dnf.out  H6nbdnf_dnf.out  H8nbdnf_dnf.out  tot_sum.out
counted/S8/: H0nbdnf_dnf.out  H2nbdnf_dnf.out  H4nbdnf_dnf.out  H6nbdnf_dnf.out  H8nbdnf_dnf.out  tot_sum.out
python/: plot.py  qgsm_collect.py  qgsm_plot.py
